--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+:root{
+    --letraTexto: blue;
+}
+
 /* RESETEA LAS CARACTERISTICAS DE LOS ELEMENTOS EN LOS DIFERENTES EXPLORADORES WEB */
 html {
     box-sizing: border-box;
@@ -13,7 +17,10 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
 }
+p{
+    color: var(--letraTexto);
 
+}
 #wrapper {
     margin-left: 2.5%;
     width: 95%;
@@ -88,5 +95,12 @@ a {
     .nav {
         flex-direction: column;
         align-items: center;
+    }
+    .nav__img{
+        display: flex;
+        justify-content: center;
+    }
+    .nav__enlaces{
+        flex-direction: column;
     }
 }
