--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,9 @@ a {
     color: white;
     padding: 20px;
 }
+/* MENU HAMBURGUESA */
 
+/* AQUI VA EL MENU HAMBURGUESA */
 /* PORTAFOLIO */
 .tarjetas {
     display: flex;
